--- a/main.css
+++ b/main.css
@@ -87,12 +87,14 @@ body {
     background: var(--color-grey);
     width: 100%;
     height: 100%;
+    padding: 15px 25px;
 }
 
 .videos .videosGrid {
     display: flex;
     justify-content: space-around;
-    margin: 25px 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .videos .videosGrid .video {
@@ -116,4 +118,15 @@ body {
     border-radius: 50%;
     height: 30px;
     width: 30px;
+    margin-right: 10px;
+}
+
+.details {
+    display: flex;
+    margin-top: 10px;
+}
+
+.details .title {
+    display: flex;
+    flex-direction: column;
 }
