--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
-:root {
+ :root {
     --color-grey: #e5e5e5;
     --color-grey-dark: #e5e5d2;
+    --color-bg: #f9f9f9;
 }
 
 * {
@@ -10,15 +11,39 @@
     box-sizing: border-box;
 }
 
+h1 {
+    font-size: 20px;
+    margin-top: 10px;
+    color: rgb(3, 3, 3);
+}
+
+h4 {
+    font-size: 14px;
+    margin-left: 15px;
+    color: rgb(96, 96, 96);
+    margin-bottom: 10px;
+}
+
+hr {
+    height: 1px;
+    background-color: var(--color-grey);
+    border: none;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
 }
 
+.material-icons {
+    color: rgb(96, 96, 96)
+}
+
 .menuBar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 70px;
+    padding: 15px;
 }
 
 .menuBar .logo {
@@ -38,6 +63,9 @@ body {
 .menuBar .search form {
     border: 1px solid #ddd;
     height: 35px;
+    margin: 0;
+    padding: 0;
+    display: flex;
 }
 
 .menuBar .search input {
@@ -63,19 +91,37 @@ body {
     overflow: hidden;
 }
 
-.mainBody .categories {
+.categories {
+    height: 100%;
     width: 230px;
-    background-color: white;
+    background-color: #ddd;
     overflow-y: scroll;
 }
 
 .mainBody .categories .categoriesSection {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 
 .mainBody .categories .categoriesSection .category {
+    display: flex;
+    align-items: center;
     padding: 12px 25px;
+}
+
+.mainBody .categories .categoriesSection .category .active {
+    color: red;
+}
+
+.mainBody .categories .categoriesSection .category span {
+    margin-left: 15px;
+}
+
+.active-span {
+    background: var(--color-grey-dark);
 }
 
 .mainBody .categories .categoriesSection .category:hover {
@@ -84,10 +130,12 @@ body {
 }
 
 .videos {
-    background: var(--color-grey);
+    background: var(--color-bg);
     width: 100%;
     height: 100%;
     padding: 15px 25px;
+    border-top: 1px solid white;
+    overflow-y: scroll;
 }
 
 .videos .videosGrid {
@@ -99,7 +147,8 @@ body {
 
 .videos .videosGrid .video {
     width: calc(25% - 10px);
-    margin-right: 15px;
+    margin-right: 10px;
+    margin-bottom: 30px;
 }
 
 .videos .videosGrid .video .thumbnail {
@@ -129,4 +178,16 @@ body {
 .details .title {
     display: flex;
     flex-direction: column;
+}
+
+.details .title h3 {
+    color: rgb(3, 3, 3);
+    font-size: 14px;
+}
+
+.details .title a,
+span {
+    text-decoration: none;
+    color: rgb(96, 96, 96);
+    font-size: 14px;
 }
